// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v2 render flex snapshots full render snapshot for representative case (blue/8x1) 1`] = `
"<div class="pp-message pp-flex blue r-8x1" data-pp-style-layout="flex" data-pp-style-color="blue" data-pp-style-ratio="8x1"><style>
html,
body,
button {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
}

button {
    width: 100%;
    border: none;
    padding: 0;
}

html {
    font-size: 14px;
    overflow: hidden;
}

.pp-message.pp-flex {
    position: relative;
    width: 100%;
    height: 100%;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 300;
    cursor: pointer;
    box-sizing: border-box;
    overflow: hidden;
}

.pp-message.pp-flex .pp-flex__background,
.pp-message.pp-flex .pp-flex__content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    box-sizing: border-box;
}

.pp-message.pp-flex .pp-flex__background {
    z-index: -1;
}


* {
    box-sizing: border-box;
}

.pp-flex__logo img {
    display: block;
    width: 100%;
    height: auto;
}

.pp-flex__logo--fallback {
    width: 100%;
}

button:focus .pp-message.pp-flex .pp-flex__content,
button:focus .pp-message.pp-flex .pp-flex__content span.br {
    text-decoration: underline;
}

.pp-flex__disclaimer span,
.pp-flex__action span {
    text-decoration: underline;
    font-weight: 300;
}

.pp-flex__action span {
    white-space: nowrap;
}

.pp-flex__disclaimer {
    white-space: normal;
}

.pp-flex__logo-container {
    display: flex;
    align-items: center;
}

.pp-message.pp-flex.blue .pp-flex__background { background: #023188; }
.pp-message.pp-flex.blue .pp-flex__content { color: #fff; }
.pp-message.pp-flex.black .pp-flex__background { background: #000; }
.pp-message.pp-flex.black .pp-flex__content { color: #fff; }
.pp-message.pp-flex.white .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white .pp-flex__content { color: #023187; border: 1px solid #009cde; }
.pp-message.pp-flex.white-no-border .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white-no-border .pp-flex__content { color: #023187; }
.pp-message.pp-flex.gray .pp-flex__background { background: #eaeced; }
.pp-message.pp-flex.gray .pp-flex__content { color: #023187; }
.pp-message.pp-flex.monochrome .pp-flex__background { background: #fff; }
.pp-message.pp-flex.monochrome .pp-flex__content { color: #000; border: 1px solid #000; }
.pp-message.pp-flex.grayscale .pp-flex__background { background: #fff; }
.pp-message.pp-flex.grayscale .pp-flex__content { border: 1px solid #b7bcbf; }

.pp-message.pp-flex.blue .pp-flex__logo img,
.pp-message.pp-flex.black .pp-flex__logo img { filter: brightness(0) invert(1); }
.pp-message.pp-flex.monochrome .pp-flex__logo img { filter: grayscale(100%) brightness(0); }
.pp-message.pp-flex.grayscale .pp-flex__logo img { filter: grayscale(100%); }


.pp-message.pp-flex.r-8x1 .pp-flex__content {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-right: 1rem;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    flex: 0 0 33%;
    justify-content: center;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo {
    width: 60%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
    display: none;
}

.pp-message.pp-flex.r-8x1 .pp-flex__messaging {
    flex: 1 1 100%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__main {
    font-size: 5vw;
    line-height: 1;
    font-weight: 400;
    display: block;
}

.pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
.pp-message.pp-flex.r-8x1 .pp-flex__action {
    font-size: 10px;
    line-height: 1.1;
    display: inline;
}

@media (max-aspect-ratio: 61/10) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin-left: 10px;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin-left: 0;
        margin-right: 0;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 324px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 45%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 50%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 55%; }
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 2.5%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 323px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 7%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin: 0 5px;
        width: 30%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin: 0;
        width: 60%;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 400px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 4vw; margin-bottom: 0.5rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 520px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action { font-size: 0.85rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 640px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 1.7rem; }
}
.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    padding-bottom: 2.5px;
}

@media (min-aspect-ratio: 80/11) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main {
        display: block;
        line-height: 1.3em;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 50%;
        margin-left: 10px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-left: 0;
    }
}

@media (min-aspect-ratio: 80/11) and (min-width: 500px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 3vw; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { flex-basis: 22%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 18%;
        margin-right: 5%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline-block;
        width: 55%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action {
        font-size: 0.9rem;
    }
}
</style><div class="pp-flex__background"></div><div class="pp-flex__content"><div class="pp-flex__logo-container" aria-hidden="true"><span class="pp-flex__logo paypal"><img src="data:local/white-monogram" alt role="presentation" width="24" height="32" /></span><span class="pp-flex__logo paypal"><img src="data:local/white-wordmark" alt role="presentation" width="100" height="32" /></span></div><div class="pp-flex__messaging"><div aria-label="PayPal Pay Later." class="pp-flex__main">Pay Later.</div><div aria-label="Learn more" class="pp-flex__action"><span>Learn more</span></div><div class="pp-flex__disclaimer">Subject to approval.</div></div></div></div>"
`;

exports[`v2 render flex snapshots no-custom-font snapshot uses v5 Helvetica/Arial default stack 1`] = `
"
html,
body,
button {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
}

button {
    width: 100%;
    border: none;
    padding: 0;
}

html {
    font-size: 14px;
    overflow: hidden;
}

.pp-message.pp-flex {
    position: relative;
    width: 100%;
    height: 100%;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 300;
    cursor: pointer;
    box-sizing: border-box;
    overflow: hidden;
}

.pp-message.pp-flex .pp-flex__background,
.pp-message.pp-flex .pp-flex__content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    box-sizing: border-box;
}

.pp-message.pp-flex .pp-flex__background {
    z-index: -1;
}


* {
    box-sizing: border-box;
}

.pp-flex__logo img {
    display: block;
    width: 100%;
    height: auto;
}

.pp-flex__logo--fallback {
    width: 100%;
}

button:focus .pp-message.pp-flex .pp-flex__content,
button:focus .pp-message.pp-flex .pp-flex__content span.br {
    text-decoration: underline;
}

.pp-flex__disclaimer span,
.pp-flex__action span {
    text-decoration: underline;
    font-weight: 300;
}

.pp-flex__action span {
    white-space: nowrap;
}

.pp-flex__disclaimer {
    white-space: normal;
}

.pp-flex__logo-container {
    display: flex;
    align-items: center;
}

.pp-message.pp-flex.blue .pp-flex__background { background: #023188; }
.pp-message.pp-flex.blue .pp-flex__content { color: #fff; }
.pp-message.pp-flex.black .pp-flex__background { background: #000; }
.pp-message.pp-flex.black .pp-flex__content { color: #fff; }
.pp-message.pp-flex.white .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white .pp-flex__content { color: #023187; border: 1px solid #009cde; }
.pp-message.pp-flex.white-no-border .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white-no-border .pp-flex__content { color: #023187; }
.pp-message.pp-flex.gray .pp-flex__background { background: #eaeced; }
.pp-message.pp-flex.gray .pp-flex__content { color: #023187; }
.pp-message.pp-flex.monochrome .pp-flex__background { background: #fff; }
.pp-message.pp-flex.monochrome .pp-flex__content { color: #000; border: 1px solid #000; }
.pp-message.pp-flex.grayscale .pp-flex__background { background: #fff; }
.pp-message.pp-flex.grayscale .pp-flex__content { border: 1px solid #b7bcbf; }

.pp-message.pp-flex.blue .pp-flex__logo img,
.pp-message.pp-flex.black .pp-flex__logo img { filter: brightness(0) invert(1); }
.pp-message.pp-flex.monochrome .pp-flex__logo img { filter: grayscale(100%) brightness(0); }
.pp-message.pp-flex.grayscale .pp-flex__logo img { filter: grayscale(100%); }


.pp-message.pp-flex.r-8x1 .pp-flex__content {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-right: 1rem;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    flex: 0 0 33%;
    justify-content: center;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo {
    width: 60%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
    display: none;
}

.pp-message.pp-flex.r-8x1 .pp-flex__messaging {
    flex: 1 1 100%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__main {
    font-size: 5vw;
    line-height: 1;
    font-weight: 400;
    display: block;
}

.pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
.pp-message.pp-flex.r-8x1 .pp-flex__action {
    font-size: 10px;
    line-height: 1.1;
    display: inline;
}

@media (max-aspect-ratio: 61/10) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin-left: 10px;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin-left: 0;
        margin-right: 0;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 324px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 45%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 50%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 55%; }
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 2.5%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 323px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 7%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin: 0 5px;
        width: 30%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin: 0;
        width: 60%;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 400px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 4vw; margin-bottom: 0.5rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 520px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action { font-size: 0.85rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 640px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 1.7rem; }
}
.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    padding-bottom: 2.5px;
}

@media (min-aspect-ratio: 80/11) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main {
        display: block;
        line-height: 1.3em;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 50%;
        margin-left: 10px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-left: 0;
    }
}

@media (min-aspect-ratio: 80/11) and (min-width: 500px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 3vw; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { flex-basis: 22%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 18%;
        margin-right: 5%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline-block;
        width: 55%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action {
        font-size: 0.9rem;
    }
}
"
`;

exports[`v2 render flex snapshots renders flex stylesheet once 1`] = `
"<style>
html,
body,
button {
    height: 100%;
}

body {
    margin: 0;
    padding: 0;
}

button {
    width: 100%;
    border: none;
    padding: 0;
}

html {
    font-size: 14px;
    overflow: hidden;
}

.pp-message.pp-flex {
    position: relative;
    width: 100%;
    height: 100%;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 300;
    cursor: pointer;
    box-sizing: border-box;
    overflow: hidden;
}

.pp-message.pp-flex .pp-flex__background,
.pp-message.pp-flex .pp-flex__content {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: hidden;
    box-sizing: border-box;
}

.pp-message.pp-flex .pp-flex__background {
    z-index: -1;
}


* {
    box-sizing: border-box;
}

.pp-flex__logo img {
    display: block;
    width: 100%;
    height: auto;
}

.pp-flex__logo--fallback {
    width: 100%;
}

button:focus .pp-message.pp-flex .pp-flex__content,
button:focus .pp-message.pp-flex .pp-flex__content span.br {
    text-decoration: underline;
}

.pp-flex__disclaimer span,
.pp-flex__action span {
    text-decoration: underline;
    font-weight: 300;
}

.pp-flex__action span {
    white-space: nowrap;
}

.pp-flex__disclaimer {
    white-space: normal;
}

.pp-flex__logo-container {
    display: flex;
    align-items: center;
}

.pp-message.pp-flex.blue .pp-flex__background { background: #023188; }
.pp-message.pp-flex.blue .pp-flex__content { color: #fff; }
.pp-message.pp-flex.black .pp-flex__background { background: #000; }
.pp-message.pp-flex.black .pp-flex__content { color: #fff; }
.pp-message.pp-flex.white .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white .pp-flex__content { color: #023187; border: 1px solid #009cde; }
.pp-message.pp-flex.white-no-border .pp-flex__background { background: #fff; }
.pp-message.pp-flex.white-no-border .pp-flex__content { color: #023187; }
.pp-message.pp-flex.gray .pp-flex__background { background: #eaeced; }
.pp-message.pp-flex.gray .pp-flex__content { color: #023187; }
.pp-message.pp-flex.monochrome .pp-flex__background { background: #fff; }
.pp-message.pp-flex.monochrome .pp-flex__content { color: #000; border: 1px solid #000; }
.pp-message.pp-flex.grayscale .pp-flex__background { background: #fff; }
.pp-message.pp-flex.grayscale .pp-flex__content { border: 1px solid #b7bcbf; }

.pp-message.pp-flex.blue .pp-flex__logo img,
.pp-message.pp-flex.black .pp-flex__logo img { filter: brightness(0) invert(1); }
.pp-message.pp-flex.monochrome .pp-flex__logo img { filter: grayscale(100%) brightness(0); }
.pp-message.pp-flex.grayscale .pp-flex__logo img { filter: grayscale(100%); }


.pp-message.pp-flex.r-8x1 .pp-flex__content {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-right: 1rem;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    flex: 0 0 33%;
    justify-content: center;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo {
    width: 60%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
    display: none;
}

.pp-message.pp-flex.r-8x1 .pp-flex__messaging {
    flex: 1 1 100%;
}

.pp-message.pp-flex.r-8x1 .pp-flex__main {
    font-size: 5vw;
    line-height: 1;
    font-weight: 400;
    display: block;
}

.pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
.pp-message.pp-flex.r-8x1 .pp-flex__action {
    font-size: 10px;
    line-height: 1.1;
    display: inline;
}

@media (max-aspect-ratio: 61/10) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin-left: 10px;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin-left: 0;
        margin-right: 0;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 324px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 45%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 50%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-width: 374px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) { width: 55%; }
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 2.5%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child { width: 60%; }
}

@media (max-aspect-ratio: 61/10) and (max-width: 323px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { margin-right: 7%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        margin: 0 5px;
        width: 30%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        margin: 0;
        width: 60%;
    }
}

@media (max-aspect-ratio: 61/10) and (min-width: 400px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 4vw; margin-bottom: 0.5rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 520px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action { font-size: 0.85rem; }
}

@media (max-aspect-ratio: 61/10) and (min-width: 640px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 1.7rem; }
}
.pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
    padding-bottom: 2.5px;
}

@media (min-aspect-ratio: 80/11) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main {
        display: block;
        line-height: 1.3em;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container {
        flex-basis: 12%;
        margin-bottom: -6px;
        justify-content: flex-start;
        margin-left: 5px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 50%;
        margin-left: 10px;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-left: 0;
    }
}

@media (min-aspect-ratio: 80/11) and (min-width: 500px) {
        .pp-message.pp-flex.r-8x1 .pp-flex__main { font-size: 3vw; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo-container { flex-basis: 22%; }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(1) {
        width: 18%;
        margin-right: 5%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo:nth-of-type(2) {
        display: inline-block;
        width: 55%;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__logo.paypal-credit:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo.venmo:nth-of-type(1),
    .pp-message.pp-flex.r-8x1 .pp-flex__logo:only-child {
        width: 60%;
        margin-right: 0;
    }

        .pp-message.pp-flex.r-8x1 .pp-flex__disclaimer,
        .pp-message.pp-flex.r-8x1 .pp-flex__action {
        font-size: 0.9rem;
    }
}
</style>"
`;

exports[`v2 render snapshots full render snapshot for representative case 1`] = `
"<div class="pp-message" data-pp-style-layout="text" data-pp-style-logo-position="left" data-pp-style-logo-type="primary" data-pp-style-text-align="left" data-pp-style-text-color="black" data-pp-style-text-size="12"><style>
body {
    margin: 0;
    padding: 0;
}

.pp-message {
    display: block;
    width: 100%;
    cursor: pointer;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.3;
    text-align: left;
}

.pp-message .main.black { color: #000; }
.pp-message .main.monochrome { color: #000; }
.pp-message .main.grayscale { color: #000; }
.pp-message .main.white { color: #fff; }

.pp-message .action__link {
  color: #0070ba;
  text-decoration: underline;
  text-decoration-color: currentColor;
  white-space: nowrap;
}
.pp-message .monochrome .action__link,
.pp-message .grayscale .action__link { color: #000; }
.pp-message .white .action__link { color: #fff; text-decoration-color: #fff; }

button:focus .pp-message .main,
button:active .pp-message .main {
  text-decoration: underline;
}

.pp-message .logo {
  display: inline-block;
  line-height: 1.3;
  vertical-align: top;
}
.pp-message .logo.top {
  display: block;
}
.pp-message .logo.paypal-credit {
  vertical-align: middle;
}
.pp-message .logo.inline {
  display: inline;
}
.pp-message .logo.inline.paypal-credit {
  vertical-align: middle;
}

.pp-message img {
  max-height: 1.25em;
  height: 1.25em;
  width: auto;
  margin-right: 0.3125em;
}

.pp-message .logo.right img {
  margin-right: 0;
  margin-left: 0.3125em;
}
.pp-message .logo.top img:last-child {
  margin-right: 0;
}
.pp-message .logo.inline img {
  display: inline-block;
  margin-right: 0;
}

.pp-message .logo.inline.paypal-credit img {
  vertical-align: text-top;
  max-height: 1em;
  height: 1em;
}
</style><span role="img" aria-label="PayPal" class="logo black left wordmark paypal"><img src="data:local/color-monogram" alt role="presentation" width="24" height="32" /><img src="data:local/color-wordmark" alt role="presentation" width="100" height="32" /></span><span aria-label="Pay Later. Subject to approval." class="main left black">Pay Later. Subject to approval.</span> <span aria-label="Learn more" class="action black"><span class="action__link">Learn more</span></span></div>"
`;

exports[`v2 render snapshots renders the v2 stylesheet once 1`] = `
"<style>
body {
    margin: 0;
    padding: 0;
}

.pp-message {
    display: block;
    width: 100%;
    cursor: pointer;
    font-family: Helvetica, Arial, sans-serif;
    font-weight: 400;
    font-size: 12px;
    line-height: 1.3;
    text-align: left;
}

.pp-message .main.black { color: #000; }
.pp-message .main.monochrome { color: #000; }
.pp-message .main.grayscale { color: #000; }
.pp-message .main.white { color: #fff; }

.pp-message .action__link {
  color: #0070ba;
  text-decoration: underline;
  text-decoration-color: currentColor;
  white-space: nowrap;
}
.pp-message .monochrome .action__link,
.pp-message .grayscale .action__link { color: #000; }
.pp-message .white .action__link { color: #fff; text-decoration-color: #fff; }

button:focus .pp-message .main,
button:active .pp-message .main {
  text-decoration: underline;
}

.pp-message .logo {
  display: inline-block;
  line-height: 1.3;
  vertical-align: top;
}
.pp-message .logo.top {
  display: block;
}
.pp-message .logo.paypal-credit {
  vertical-align: middle;
}
.pp-message .logo.inline {
  display: inline;
}
.pp-message .logo.inline.paypal-credit {
  vertical-align: middle;
}

.pp-message img {
  max-height: 1.25em;
  height: 1.25em;
  width: auto;
  margin-right: 0.3125em;
}

.pp-message .logo.right img {
  margin-right: 0;
  margin-left: 0.3125em;
}
.pp-message .logo.top img:last-child {
  margin-right: 0;
}
.pp-message .logo.inline img {
  display: inline-block;
  margin-right: 0;
}

.pp-message .logo.inline.paypal-credit img {
  vertical-align: text-top;
  max-height: 1em;
  height: 1em;
}
</style>"
`;
